--- a/kv-pick/index.html
+++ b/kv-pick/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <kv-pick data-batches="batches" data-quantity="qty" batch="LNBI4">
+    <kv-pick data-batches="batches" data-quantity="qty" batch="LNBI4" batchqty="3">
         {
         "code": "fufi",
         "requested": 67,
