--- a/kvSelect/index.html
+++ b/kvSelect/index.html
@@ -7,7 +7,7 @@
     <title>kvSelect</title>
     <link rel="stylesheet" href="./kvSelect.css">
     <script src="./kvSelect.js"></script>
-    <script src="../jsfiddle.js"></script>
+    <script src="../playgrounds.js"></script>
 </head>
 
 <body>
