feat: update .gitignore to exclude kv-date and kv-organogram; enhance build process to update project list; modify kv-pick and kv-params for improved functionality; add README files for new components

--- a/index.html
+++ b/index.html
@@ -28,28 +28,26 @@
         </aside>
         <div>
             <p>This is he main section</p>
-            <ul id="Projects">
-                <li><a href="./barcode/index.html">barcode</a></li>
-                <li><a href="./kv-budget/index.html">kv-budget</a></li>
-                <li><a href="./kv-form/index.html">kv-form</a></li>
-                <li><a href="./kv-gantt/index.html">kv-gantt</a></li>
-                <li><a href="./kv-gauge/index.html">kv-gauge</a></li>
-                <li><a href="./kv-organogram/index.html">kv-organogram</a></li>
-                <li><a href="./kv-pair/index.html">kv-pair</a></li>
-                <li><a href="./kv-params/index.html">kv-params</a></li>
-                <li><a href="./kv-pick/index.html">kv-pick</a></li>
-                <li><a href="./kv-table/index.html">kv-table</a></li>
-                <li><a href="./kv-tags/index.html">kv-tags</a></li>
-                <li><a href="./kv-timeline/index.html">kv-timeline</a></li>
-                <li><a href="./kvAutocomplete/index.html">kvAutocomplete</a></li>
-                <li><a href="./kvCart/index.html">kvCart</a></li>
-                <li><a href="./kvImportData/index.html">kvImportData</a></li>
-                <li><a href="./kvJSONForm/index.html">kvJSONForm</a></li>
-                <li><a href="./kvProductionLine/index.html">kvProductionLine</a></li>
-                <li><a href="./kvSelect/index.html">kvSelect</a></li>
-                <li><a href="./kvSelections/index.html">kvSelections</a></li>
-                <li><a href="./kvTags/index.html">kvTags</a></li>
-            </ul>
+            <h1>Projects</h1><ul id="Projects">
+        <li><a href="./barcode/index.html" target="_blank">barcode</a></li>
+        <li><a href="./kv-form/index.html" target="_blank">kv-form</a></li>
+        <li><a href="./kv-gantt/index.html" target="_blank">kv-gantt</a></li>
+        <li><a href="./kv-gauge/index.html" target="_blank">kv-gauge</a></li>
+        <li><a href="./kv-pair/index.html" target="_blank">kv-pair</a></li>
+        <li><a href="./kv-params/index.html" target="_blank">kv-params</a></li>
+        <li><a href="./kv-pick/index.html" target="_blank">kv-pick</a></li>
+        <li><a href="./kv-table/index.html" target="_blank">kv-table</a></li>
+        <li><a href="./kv-tags/index.html" target="_blank">kv-tags</a></li>
+        <li><a href="./kv-timeline/index.html" target="_blank">kv-timeline</a></li>
+        <li><a href="./kvAutocomplete/index.html" target="_blank">kvAutocomplete</a></li>
+        <li><a href="./kvCart/index.html" target="_blank">kvCart</a></li>
+        <li><a href="./kvImportData/index.html" target="_blank">kvImportData</a></li>
+        <li><a href="./kvJSONForm/index.html" target="_blank">kvJSONForm</a></li>
+        <li><a href="./kvProductionLine/index.html" target="_blank">kvProductionLine</a></li>
+        <li><a href="./kvSelect/index.html" target="_blank">kvSelect</a></li>
+        <li><a href="./kvSelections/index.html" target="_blank">kvSelections</a></li>
+        <li><a href="./kvTags/index.html" target="_blank">kvTags</a></li>
+    </ul>
         </div>
         <aside class="right">
             <div>
