--- a/kv-pick/index.html
+++ b/kv-pick/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <kv-pick data-batches="batches" data-quantity="qty" batch="DBAF5" batchqty="10">
+    <kv-pick data-batches="batches" data-quantity="qty" batch="DBAA5" batchqty="1">
         {
         "batches": [
         {"expiration":"2028-11-30","name":"DBAA5","location":"A5_1","available":1,"picked":1},
@@ -18,7 +18,7 @@
         {"expiration":"2029-06-30","name":"DBAG5","location":"A5_1","available":1},
         {"expiration":"2029-07-31","name":"DBBH5","location":"A5_1","available":1}
         ],
-        "requested":12,
+        "requested":20,
         "code":"EXPO-LOVBASE"
         }
     </kv-pick>
